# taskpods

./: .codecov.yml  .flake8  .gitignore  .pre-commit-config.yaml  BADGE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPROVEMENTS.md  Makefile  PRODUCTION_README.md  README.md  pyproject.toml  requirements-dev.txt  setup.py  taskpods.py  taskpodsrc.example
.github/: CONTRIBUTING.md  FUNDING.yml  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
scripts/: README.md  __init__.py  release.py
taskpods.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_done_abort_functions.py  test_main_functions.py  test_remaining_functions.py  test_taskpods.py  test_taskpods_pytest.py
